# binance-bot

./: .env.example  .gitignore  README.md  pyproject.toml  run_collector.py  run_seed_batch.cmd  start_collector.pyw  start_paper.pyw  sync_data_from_vps.cmd
config/: paper_mode.json  trading_params.json
docs/: binance_api.md  binance_margin.md  binance_margin_rules.md  machine_learning_btc_complete_plan.md  metatrader_api.md  status_ml.md
scripts/: sync_incremental_blocks.py
src/binance_bot/collector/: auth.py  binance_spot.py  config.py  env_loader.py  main.py  quality.py  schemas.py  storage.py
src/binance_bot/mt5/: build_regime_features.py  collect_candles.py  config.py  timeframes.py
src/binance_bot/paper/: config.py  live_runner.py  paper_realtime_runner.py  paper_runner.py
src/binance_bot/runtime/: params.py
src/binance_bot/strategies/: base.py  baselines.py  mlofi_seq_gru.py  mlofi_seq_mlp.py  mlofi_xgb.py  registry.py
src/binance_bot/training/: archive_champion.py  paper_aligned.py  promote_champion.py  run_single_candidate_eval.py  run_xgb_clean_search.py  run_xgb_seed_batch.py  xgb_clean_search.py
