[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-bot"
version = "0.1.0"
description = "BTCBRL market data collector for Binance Spot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pyarrow>=16.0.0",
  "MetaTrader5>=5.0.45",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "torch>=2.3.0",
]

[project.scripts]
collector = "binance_bot.collector.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
